--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.9.4",
     "bootstrap": "^5.3.2",
     "graphql": "^16.8.1",
+    "isomorphic-fetch": "^3.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
