--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.4",
+    "@stripe/react-stripe-js": "^2.5.0",
     "bootstrap": "^5.3.2",
     "graphql": "^16.8.1",
     "isomorphic-fetch": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
