--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.9.4",
     "@stripe/react-stripe-js": "^2.5.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "graphql": "^16.8.1",
     "isomorphic-fetch": "^3.0.0",
